@@ -299,7 +299,7 @@ public class JSONWriter {
      * @throws JSONException If the number is not finite.
      */
     public JSONWriter value(double d) throws JSONException {
-        return this.value(new Double(d));
+        return this.append(JSONObject.numberToString(Double.valueOf(d)));
     }
 
     /**
